--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -30,14 +30,21 @@
             maxCountErrors
             <input type="number" name="maxCountErrors" value="100" placeholder="Max count of errors" class="form-control"><br>
             commandPetCount
-            <input type="number" name="commandPetCount" value="5" placeholder="command Pet Count" class="form-control"><br>
+            <input type="number" name="commandPetCount" value="10" placeholder="command Pet Count" class="form-control"><br>
             screenNumber
-            <input type="number" name="screenNumber" value="1" placeholder="screen Number 0 1 2" class="form-control"><br>
+            <input type="number" name="screenNumber" value="0" placeholder="screen Number 0 1 2" class="form-control"><br>
             stopTime
-            <input type="time" name="stopTime" value="06:55" placeholder="stopTime" class="form-control"><br>
+            <input type="time" name="stopTime" value="00:00" placeholder="stopTime" class="form-control"><br>
+            botType
+            <input type="number" name="botType" value="0" placeholder="bot type 0 - fish 1 - pet" class="form-control"><br>
 
             <input formaction="/run" type="submit" class="btn btn-success" value ="Start bot"/>
+            <!--<input formaction="/pause" type="submit" class="btn btn-success" value ="Pause bot"/>
+            <input formaction="/resume" type="submit" class="btn btn-success" value ="Resume bot"/>-->
         </form>
+
+        <a class="nav-link" href="/pause">Pause bot</a>
+        <a class="nav-link" href="/resume">Resume bot</a>
 
         <footer th:insert="blocks/footer :: footer"></footer>
     </main>
