--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <title th:text="${name}"/>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
@@ -25,20 +25,27 @@
         <h1>Settings</h1>
 
         <form method="post">
+            gameType
+            <input class="form-control" max="1" min="0" name="gameType" placeholder="game type: 0 - wow, 1 - nw"
+                   type="number" value="1"><br>
             countActsInLog
-            <input type="number" name="countActsInLog" value="20" placeholder="Count acts in each part of log screenshot" class="form-control"><br>
+            <input class="form-control" name="countActsInLog" placeholder="Count acts in each part of log screenshot"
+                   type="number" value="20"><br>
             maxCountErrors
-            <input type="number" name="maxCountErrors" value="100" placeholder="Max count of errors" class="form-control"><br>
+            <input class="form-control" name="maxCountErrors" placeholder="Max count of errors" type="number"
+                   value="100"><br>
             commandPetCount
             <input type="number" name="commandPetCount" value="10" placeholder="command Pet Count" class="form-control"><br>
             screenNumber
-            <input type="number" name="screenNumber" value="0" placeholder="screen Number 0 1 2" class="form-control"><br>
+            <input class="form-control" max="1" min="0" name="screenNumber" placeholder="screen Number 0 1"
+                   type="number" value="0"><br>
             stopTime
             <input type="time" name="stopTime" value="00:00" placeholder="stopTime" class="form-control"><br>
             botType
-            <input type="number" name="botType" value="0" placeholder="bot type 0 - fish 1 - pet" class="form-control"><br>
+            <input class="form-control" max="2" min="0" name="botType"
+                   placeholder="bot type: 0 - fish, 1 - pet, 2 - gathering" type="number" value="2"><br>
 
-            <input formaction="/run" type="submit" class="btn btn-success" value ="Start bot"/>
+            <input class="btn btn-success" formaction="/run" type="submit" value="Start bot"/>
             <!--<input formaction="/pause" type="submit" class="btn btn-success" value ="Pause bot"/>
             <input formaction="/resume" type="submit" class="btn btn-success" value ="Resume bot"/>-->
         </form>
