--- a/src/main/resources/templates/pause.html
+++ b/src/main/resources/templates/pause.html
@@ -2,13 +2,13 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <title th:text="${name}"/>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 <header th:insert="blocks/header :: header"></header>
 <div class="row">
-    <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
+    <nav class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse" id="sidebarMenu">
         <div th:insert="blocks/sidebarMenu :: sidebarMenu"></div>
     </nav>
 
@@ -24,16 +24,7 @@
 
         <h1>Settings</h1>
 
-        <a class="nav-link" href="/pause">Pause bot</a>
-        <a class="nav-link" href="/resume">Resume bot</a>
-        <a class="nav-link" href="/left">left</a>
-        <a class="nav-link" href="/right">right</a>
-        <a class="nav-link" href="/back">back</a>
-        <a class="nav-link" href="/front">front</a>
-
         <form method="post">
-            <input class="btn btn-success" formaction="/run" type="submit"
-                   value="Start bot                                                 "/>
             gameType
             <input class="form-control" max="1" min="0" name="gameType" placeholder="game type: 0 - wow, 1 - nw"
                    type="number" value="1"><br>
@@ -44,20 +35,29 @@
             <input class="form-control" name="maxCountErrors" placeholder="Max count of errors" type="number"
                    value="100"><br>
             commandPetCount
-            <input type="number" name="commandPetCount" value="10" placeholder="command Pet Count" class="form-control"><br>
+            <input class="form-control" name="commandPetCount" placeholder="command Pet Count" type="number" value="10"><br>
             screenNumber
             <input class="form-control" max="1" min="0" name="screenNumber" placeholder="screen Number 0 1"
                    type="number" value="0"><br>
             stopTime
-            <input type="time" name="stopTime" value="00:00" placeholder="stopTime" class="form-control"><br>
+            <input class="form-control" name="stopTime" placeholder="stopTime" type="time" value="00:00"><br>
             botType
             <input class="form-control" max="2" min="0" name="botType"
                    placeholder="bot type: 0 - fish, 1 - pet, 2 - gathering" type="number" value="2"><br>
 
-
+            <input class="btn btn-success" formaction="/run" type="submit"
+                   value="Start bot                                                 "/>
             <!--<input formaction="/pause" type="submit" class="btn btn-success" value ="Pause bot"/>
             <input formaction="/resume" type="submit" class="btn btn-success" value ="Resume bot"/>-->
         </form>
+
+        <a class="nav-link" href="/pause">Pause bot</a>
+        <a class="nav-link" href="/resume">Resume bot</a>
+        <a class="nav-link" href="/left">left</a>
+        <a class="nav-link" href="/right">right</a>
+        <a class="nav-link" href="/back">back</a>
+        <a class="nav-link" href="/front">front</a>
+
         <footer th:insert="blocks/footer :: footer"></footer>
     </main>
 </div>
